--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="format-detection" content="telephone=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="referrer" content="no-referrer">
   <title>vue-js</title>
   <link rel="stylesheet" href="https://unpkg.com/animate.css@3.5.1/animate.min.css">
